<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    app:layout_constraintDimensionRatio="1:1"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="52dp"
        android:paddingBottom="4dp">

        <Button
            android:id="@+id/back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            app:icon="@drawable/arrow_back"
            app:iconTint="@color/YP_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:text="@string/settings"
            android:textColor="@color/YP_black"
            android:textSize="@dimen/medium_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:fontFamily="sans-serif"
            android:gravity="fill_horizontal|center_vertical"
            android:paddingStart="@dimen/settings_margin_left"
            android:paddingEnd="@dimen/settings_margin_right"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_height"
            android:paddingStart="@dimen/settings_margin_left"
            android:paddingTop="@dimen/settings_margin_top"
            android:paddingEnd="@dimen/settings_margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:text="@string/share_settings"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/share"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_height"
            android:paddingStart="@dimen/settings_margin_left"
            android:paddingTop="@dimen/settings_margin_top"
            android:paddingEnd="@dimen/settings_margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/support_connect"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/group" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_height"
            android:paddingStart="@dimen/settings_margin_left"
            android:paddingTop="@dimen/settings_margin_top"
            android:paddingEnd="@dimen/settings_margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/user_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/arrow__forward" />

        </FrameLayout>


    </LinearLayout>


</LinearLayout>

