<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:theme="@style/Theme.PlaylistMaker"
    app:layout_constraintDimensionRatio="1:1"
    tools:context=".search.ui.SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="52dp"
        android:paddingBottom="4dp">


        <TextView
            style="@style/TextSettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:text="@string/search" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/SearchTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/search_field"
            android:contextClickable="true"
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_blue"

            />


        <ImageView
            android:id="@+id/clearIcon"
            style="@style/IconSearchStyle"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/baseline_close_24"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/YP_Blue"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_track" />

        <LinearLayout
            android:id="@+id/placeholderView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="102dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"

            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholderIV"
                android:layout_width="120dp"
                android:layout_height="120dp"
                tools:src="@drawable/placeholder_not_find" />

            <TextView
                android:id="@+id/placeholderTV"
                style="@style/FontStyle.Placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal" />

            <Button

                android:id="@+id/refreshButton"
                style="@style/RefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:text="@string/refresh"
                android:visibility="gone" />


        </LinearLayout>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/searchHistoryGroupView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            style="@style/FontStyle.youSearched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:text="@string/You_search" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchHistoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/item_track" />


        <Button
            android:id="@+id/clearButton"
            style="@style/RefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginVertical="24dp"
            android:text="@string/clear_history" />

    </LinearLayout>
</LinearLayout>
